<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ui.viewmodel.TmbActivity">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/logo_haffitmain" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/backgroundcolor"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp">

            <TextView
                style="@style/TextViewForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="@string/tmb_desc"
                android:textColor="@color/white"/>

            <EditText
                style="@style/EditTexForm"
                android:id="@+id/edit_tmb_weight"
                android:hint="@string/wheight"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"/>

            <EditText
                style="@style/EditTexForm"
                android:id="@+id/edit_tmb_height"
                android:hint="@string/height"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"/>


            <EditText
                style="@style/EditTexForm"
                android:id="@+id/edit_tmb_age"
                android:hint="@string/age"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/AutoTextViewForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white"
                android:textColor="@color/white">

                <AutoCompleteTextView
                    android:id="@+id/auto_lifestyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/white"
                    android:textColorHint="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_tmb_send"
                style="@style/ButtonForm"
                android:textColor="@color/colorbackground1"
                android:background="@drawable/button_water"
                android:text="@string/calc" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/tmb_toolbar"
                style="@style/EditTextArea"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="10dp"
                android:background="@color/colorbackground1"
                android:elevation="1dp"
                app:titleTextColor="@color/colorbackground1" />

            </LinearLayout>



    </LinearLayout>
</ScrollView>